fixed white space at the bottom in story:vision

--- a/themes/csl/sass/_story.scss
+++ b/themes/csl/sass/_story.scss
@@ -274,6 +274,12 @@
       }
     }
   }
+  .vision-image-two {
+    display: flex;
+    img {
+      height: 100%;
+    }
+  }
   .vision-wrapper-mobile {
     display: flex;
     flex-flow: column nowrap;
